# redato

./: .gitignore  ADENDO_B2C_REDATO.md  CLAUDE.md  DEV.md  Makefile  README.md  RUNBOOK_B2C.md  SPEC_B2C_REDATO.md  repositorios_redacoes_enem.md
backend/notamil-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railpack.json  railway.toml  requirements-dev.txt  requirements.txt  setup.cfg
backend/notamil-backend/.github/workflows/: ci-cd.yml
backend/notamil-backend/data/seeds/: cartas_redacao_em_jogo.xlsx  planilha_demo.csv
backend/notamil-backend/migrations/: 001_create_professor_corrections.sql  002_firestore_ttl.md  003_essays_raw_original_ocr.sql
backend/notamil-backend/redato_backend/: dev_offline.py  unified_app.py
backend/notamil-backend/redato_backend/audits/: lexical_repetition_detector.py
backend/notamil-backend/redato_backend/b2c/: __init__.py  admin_api.py  config.py  correction.py  messages.py  notify.py  repo.py  router.py  templates.py  tick.py
backend/notamil-backend/redato_backend/base_api/: caller.py  main.py
backend/notamil-backend/redato_backend/billing/: __init__.py  asaas.py  webhook.py
backend/notamil-backend/redato_backend/diagnostico/: __init__.py  agregacao.py  bncc.py  bncc_referencia.py  descritores.py  inferencia.py  mapeador.py  (+11 more)
backend/notamil-backend/scripts/: backup_postgres.sh  calibrate_repetition_threshold.py  seed_parceiro.py  setup_demo.py  test_m1_persistence.py  test_m2_importador.py  test_m3_auth.py  test_m4_bot_atividades.py  test_m6_gestao.py  test_m7_dashboard.py  test_m8_pdf_email.py  test_migration_cycle.py  validar_tema_c2.py
(+524 files in other folders)
